[project]
name = "postman-collection-exporter"
version = "0.1.1.dev2"
description = "Export Postman collections via CLI."
authors = [{ name = "Sergey Vernigora", email = "volt.awp.dev@gmail.com" }]
maintainers = [{ name = "Sergey Vernigora", email = "volt.awp.dev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["postman", "json", "export", "cli"]

dependencies = ["asyncclick", "httpx", "anyio", "aiofiles"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
export-collections = "postman_collection_exporter.cli:export"
archive-collections = "postman_collection_exporter.cli:archive"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
